tests/fail/encap_method_priv.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

fn main() {
    auto s = string::from("Secret")
    // drop is defined as `fn drop(self#)` inside `impl string@encap`, WITHOUT `pub`.
    // It should be private to the module/file defining it.
    // This call should fail compilation.
    s.drop()
    // EXPECT: error[E0437]:
}
