tests/fail/encap_method_priv.stderr
tests/fail/encap_method_priv.tk:21:6: error[E0437]: Method 'drop' is private to 'String' and cannot be accessed from module 'encap_method_priv'
tests/fail/encap_method_priv.tk:21:6: error[E0443]: Cannot modify immutable entity 'Method 'drop' requires explicit mutable argument (use '#')'
